; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/bspc/extr_textures.c_TextureAxisFromPlane.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/bspc/extr_textures.c_TextureAxisFromPlane.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@baseaxis = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @TextureAxisFromPlane(%struct.TYPE_3__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  store i64 0, i64* %9, align 8
  store i32 0, i32* %7, align 4
  store i32 0, i32* %10, align 4
  br label %11

11:                                               ; preds = %32, %3
  %12 = load i32, i32* %10, align 4
  %13 = icmp slt i32 %12, 6
  br i1 %13, label %14, label %35

14:                                               ; preds = %11
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32*, i32** @baseaxis, align 8
  %19 = load i32, i32* %10, align 4
  %20 = mul nsw i32 %19, 3
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i32, i32* %18, i64 %21
  %23 = load i32, i32* %22, align 4
  %24 = call i64 @DotProduct(i32 %17, i32 %23)
  store i64 %24, i64* %8, align 8
  %25 = load i64, i64* %8, align 8
  %26 = load i64, i64* %9, align 8
  %27 = icmp sgt i64 %25, %26
  br i1 %27, label %28, label %31

28:                                               ; preds = %14
  %29 = load i64, i64* %8, align 8
  store i64 %29, i64* %9, align 8
  %30 = load i32, i32* %10, align 4
  store i32 %30, i32* %7, align 4
  br label %31

31:                                               ; preds = %28, %14
  br label %32

32:                                               ; preds = %31
  %33 = load i32, i32* %10, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %10, align 4
  br label %11

35:                                               ; preds = %11
  %36 = load i32*, i32** @baseaxis, align 8
  %37 = load i32, i32* %7, align 4
  %38 = mul nsw i32 %37, 3
  %39 = add nsw i32 %38, 1
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds i32, i32* %36, i64 %40
  %42 = load i32, i32* %41, align 4
  %43 = load i32, i32* %5, align 4
  %44 = call i32 @VectorCopy(i32 %42, i32 %43)
  %45 = load i32*, i32** @baseaxis, align 8
  %46 = load i32, i32* %7, align 4
  %47 = mul nsw i32 %46, 3
  %48 = add nsw i32 %47, 2
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds i32, i32* %45, i64 %49
  %51 = load i32, i32* %50, align 4
  %52 = load i32, i32* %6, align 4
  %53 = call i32 @VectorCopy(i32 %51, i32 %52)
  ret void
}

declare dso_local i64 @DotProduct(i32, i32) #1

declare dso_local i32 @VectorCopy(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
